<resources>
    <string name="app_name">CM_TP</string>

    <!-- Login -->
    <string name="action_login">Login</string>
    <string name="action_save_credentials">Save credentials</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="error_invalid_credentials">Invalid credentials</string>

    <!-- Sign Up -->
    <string name="action_sign_Up">Sign Up</string>
    <string name="hint_name">Name</string>

    <string name="dialog_you_are_signed_up">You are signed up</string>
    <string name="dialog_sign_up_failed">Sign up failed</string>

    <string name="error_fill_out_all_fields">Fill out all fields</string>
    <string name="error_enter_an_email">Enter an email</string>
    <string name="error_enter_a_password">Enter a password</string>
    <string name="error_you_must_use_an_IPCA_email">You must use an IPCA email</string>
    <string name="error_password_isnt_strong_enough">Password isn\'t strong enough</string>

    <!-- Home bar -->
    <string name="main_menu_home">Home</string>
    <string name="main_menu_subjects">Subjects</string>
    <string name="main_menu_deadlines">Deadlines</string>
    <string name="main_menu_leaderboard">Scores</string>
    <string name="main_menu_about">About</string>

    <!-- Register bar -->
    <string name="register_menu_nfc" translatable="false">NFC</string>
    <string name="register_menu_camera">Camera</string>
    <string name="action_nfc">Hold your phone against the device</string>

    <!-- Home -->
    <string name="action_register">Register</string>
    <string name="attendance_history">Attendance History:</string>

    <!-- History -->
    <string name="start">Starts at:</string>
    <string name="end">Ends at:</string>

    <!-- Subjects -->
    <string name="office_hours">Office hours:</string>
    <string name="curricular_units">Curricular Units:</string>

    <!-- Deadlines -->
    <string name="future_events">Future Events</string>
    <string name="hint_event_title">Event title</string>
    <string name="hint_date">Date</string>
    <string name="hint_describe">Describe your event</string>
    <string name="hint_add_event">Add Event</string>
    <string name="hint_delete_event">Delete Event</string>
    <string name="error_enter_a_title">Enter a title</string>
    <string name="error_enter_a_date">Enter a date</string>

    <!-- Add Deadline -->
    <string name="preview">Preview</string>

    <!-- Scores -->
    <string name="ranking_scores">Ranking Scores</string>
    <string name="ranking_points">Points:</string>

    <!-- About -->
    <string name="about_copyright">Copyright © 2022\nMEEC, IPCA, Portugal</string>

    <!-- Profile -->
    <string name="profile_email">Email:</string>
    <string name="profile_mobile_number">Mobile Number:</string>
    <string name="profile_address">Address:</string>
    <string name="profile_status">Status:</string>
    <string name="profile_average_grade">Average Grade:</string>
    <string name="profile_number_absences">Number of Absences:</string>
    <string name="profile_attendance_score">Attendance Score:</string>
    <string name="profile_leaderboard_position">Leaderboard Position:</string>

    <!-- Authors -->
    <string name="authors">Authors</string>
    <string name="authors_nuno_fernandes" translatable="false">Nuno Fernandes</string>
    <string name="authors_joaquin_dillen" translatable="false">Joaquin Dillen</string>
    <string name="authors_andre_moreira" translatable="false">André Moreira</string>

    <!-- Github -->
    <string name="source_code">Source code</string>
    <string name="github_url" translatable="false">https://github.com/nunof98/CM_TP</string>



</resources>