<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_background_pic"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:src="@drawable/ipca_background" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/imageView_background_pic"
        app:layout_constraintTop_toTopOf="@+id/imageView_background_pic"
        android:layout_margin="25dp"
        app:cardCornerRadius="90dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/ImageView_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars"
            android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView_student_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="Name ● number"
        android:textColor="?colorSecondary"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView_background_pic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/textView_student_course"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="Course"
        android:textColor="?colorSecondary"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView_student_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:id="@+id/layout_right_side"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_student_course">

        <LinearLayout
            android:id="@+id/layout_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/textView_student_mail_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_email"
                android:textStyle="bold"
                android:textColor="?colorSecondary"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/textView_student_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="studentemail@alunos.ipca.pt"
                android:textColor="?colorSecondary"
                android:textSize="20sp"
                />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/textView_phone_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_mobile_number"
                android:textStyle="bold"
                android:textColor="?colorSecondary"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/textView_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="phone number"
                android:textColor="?colorSecondary"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/textView_Addres_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_address"
                android:textStyle="bold"
                android:textColor="?colorSecondary"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/textView_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="address"
                android:textColor="?colorSecondary"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/textView_status_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_status"
                android:textStyle="bold"
                android:textColor="?colorSecondary"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/textView_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="status"
                android:textColor="?colorSecondary"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_overall_avg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/textView_overall_avg_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_average_grade"
                android:textStyle="bold"
                android:textColor="?colorSecondary"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/textView_overall_avg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="20"
                android:textColor="?colorSecondary"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <View
                android:id="@+id/view_line"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="?colorSecondary"
                android:foregroundGravity="center"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_days_left"
                app:layout_constraintBottom_toTopOf="@+id/textView_event_title"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_absences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/textView_absences_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_number_absences"
                android:textStyle="bold"
                android:textColor="?colorSecondary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_absences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="42"
                android:textColor="?colorSecondary"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/textView_score_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_attendance_score"
                android:textStyle="bold"
                android:textColor="?colorSecondary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="142"
                android:textColor="?colorSecondary"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_leaderboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/textView_leaderboard_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_leaderboard_position"
                android:textStyle="bold"
                android:textColor="?colorSecondary"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView_leaderboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="1º"
                android:textColor="?colorSecondary"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>