<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_deadline_pic"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageButton
        android:id="@+id/imageButton_select_background"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/bg_round"
        android:backgroundTint="?colorPrimary"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"/>

    <TextView
        android:id="@+id/textView_days_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_alignStart="@+id/imageView_deadline_pic"
        android:layout_alignEnd="@+id/imageView_deadline_pic"
        android:text="12 Days"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_deadline_pic"
        />

    <View
        android:id="@+id/view_line"
        android:layout_width="200dp"
        android:layout_height="3dp"
        android:background="@color/white"
        android:foregroundGravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_days_left"
        app:layout_constraintBottom_toTopOf="@+id/textView_event_title"/>

    <TextView
        android:id="@+id/textView_event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Event Title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="25dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_deadline_pic"/>

    <TextView
        android:id="@+id/textView_preview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_deadline_pic"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/preview"
        android:textColor="?colorSecondary"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_event_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_preview"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/hint_event_title"
        app:hintTextColor="?colorSecondary"
        app:endIconMode="clear_text"
        app:startIconTint="?colorSecondary"
        app:endIconTint="?colorSecondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tet_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="25"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:minHeight="50dp"
            android:background="?colorOnPrimary"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_event_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_event_title"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/hint_date"
        app:hintTextColor="?colorSecondary"
        app:endIconMode="clear_text"
        app:startIconTint="?colorSecondary"
        app:endIconTint="?colorSecondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tet_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:minHeight="50dp"
            android:background="?colorOnPrimary"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_event_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_event_date"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/hint_describe"
        app:hintTextColor="?colorSecondary"
        app:endIconMode="clear_text"
        app:startIconTint="?colorSecondary"
        app:endIconTint="?colorSecondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tet_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:minHeight="50dp"
            android:background="?colorOnPrimary"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/imageButton_add_event"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="25dp"
        android:scaleType="fitCenter"
        android:background="@drawable/bg_round"
        android:backgroundTint="@color/ipca_green"
        android:src="@drawable/ic_check"
        app:tint="@color/white"
        android:padding="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>